clarified that most of the adjunctions section is not needed for proof of prop

--- a/n-eps-TQFT-nplus1.tex
+++ b/n-eps-TQFT-nplus1.tex
@@ -81,7 +81,14 @@ $(n+1)$-dim 0-handle, which is exactly $\eta_0$.
 
 
 
+\section{Topology}
+
 \subsection{Adjunctions from topology}
+\label{s:topology-adjunctions}
+
+For the purposes of the proof of the proposition above,
+only the first simple example from this section is needed,
+the reader may then skip to \secref{s:handles-from-adjunctions}.
 
 In 2-Cob,
 %In the 2-category with closed $(n-1)$-manifolds as objects,
@@ -234,6 +241,7 @@ not necessarily the identity cobordism).
 
 \subsection{Producing $(n+1)$-dim $k$-handles
 from some adjunctions}
+\label{s:handles-from-adjunctions}
 
 Throughout this section, $0 \leq k < n$.
 
