--- a/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
+++ b/n-eps-TQFT-nplus1/n-eps-TQFT-nplus1.tex
@@ -15,6 +15,7 @@
 
 \title{Upgrading an $(n+\veps)$-TQFT to an extended $(n+1)$-TQFT}
 \author{Ying Hong Tham}
+\date{25 December, 2022}
 \maketitle
 
 
