progress, finish review stuff

--- a/mystyle.sty
+++ b/mystyle.sty
@@ -17,17 +17,17 @@
 % fancy scripts ============================================
 % I am tempted to include all possible letters,
 %   but I tried it and it's quite distasteful
-\newcommand{\RR}{\mathbb{R}}
-\newcommand{\CC}{\mathbb{C}}
-\newcommand{\ZZ}{\mathbb{Z}}
-\newcommand{\DD}{\mathbb{D}}
-\newcommand{\cA}{\mathcal{A}}
-\newcommand{\cC}{\mathcal{C}}
-\newcommand{\cZ}{\mathcal{Z}}
-\newcommand{\cF}{\mathcal{F}}
-\newcommand{\cI}{\mathcal{I}}
-\newcommand{\ee}{\mathbf{e}}
-\newcommand{\kk}{\mathbf{k}}
+\newcommand{\RR}{{\mathbb{R}}}
+\newcommand{\CC}{{\mathbb{C}}}
+\newcommand{\ZZ}{{\mathbb{Z}}}
+\newcommand{\DD}{{\mathbb{D}}}
+\newcommand{\cA}{{\mathcal{A}}}
+\newcommand{\cC}{{\mathcal{C}}}
+\newcommand{\cZ}{{\mathcal{Z}}}
+\newcommand{\cF}{{\mathcal{F}}}
+\newcommand{\cI}{{\mathcal{I}}}
+\newcommand{\ee}{{\mathbf{e}}}
+\newcommand{\kk}{{\mathbf{k}}}
 
 % Note: Decl...ator doesn't seem to allow ^ or _,
 %   e.g. 5^\id will not work,
