--- a/seminar-fusion-2cat/seminar-fusion-2cat.tex
+++ b/seminar-fusion-2cat/seminar-fusion-2cat.tex
@@ -8,9 +8,13 @@
 \usepackage{tikz-cd}
 
 
+\newcommand{\cD}{{\mathcal{D}}}
 \newcommand{\Mod}{{\mathcal{M}od}}
 \newcommand{\cHom}{{\mathcal{H}\text{om}}}
+\newcommand{\mmod}{{\textrm{mod}}}
+\newcommand{\cFun}{{\mathcal{F}un}}
 
+\newcommand{\bigboxplus}{\Huge \boxplus}%{{\scalebox{2}{\boxplus}}}
 
 \begin{document}
 
@@ -54,14 +58,14 @@ of structures:
 
 In relation to a 2-category:
 \begin{itemize}
-\item $\cC,\mathcal{F}$ (caligraphic font): 2-category,
-	functor between 2-categories
+\item $\cC$ (caligraphic font): 2-category;
 
-\item $C,X,Y$ (upper case latin): object of 2-category
+\item $X,Y,F$ (upper case latin): object of 2-category,
+	functor between 2-categories;
 
 \item $f,g$ (lower case latin): 1-morphism;
 	we write $\cC(X,Y)$ for the category of morphisms
-	from $X$ to $Y$
+	from $X$ to $Y$;
 
 \item $\eta,\veps,\delta$ (lower case greek): 2-morphism;
 	for a 2-morphism $\alpha: f \Rightarrow g: X \to Y$,
@@ -72,12 +76,21 @@ In relation to a 2-category:
 
 In relation to a 1-category:
 \begin{itemize}
-\item $C,A$ (upper case latin): category, functor between categoreis
+\item $C,A$ (upper case latin): category;
 
-\item $a,b,f,g$ (lower case latin): objects in category
+\item $a,b,f,g$ (lower case latin): objects in category,
+	functor between categories;
 
 \item $\alpha,\beta$ (lower case greek): morphism in category
 \end{itemize}
+
+[We use the same type of font for 1-functors and 1-morphisms
+because the 1-morphisms in the 2-category $\Mod(C)$
+of module categories are module functors,
+and we want the notation to be consistent;
+we use the same type of font for 2-functors and objects
+because 2-functors are objects in the 2-category of
+2-functors]
 
 We also compose morphisms from right to left:
 in a 2-category $\cC$,
@@ -110,12 +123,57 @@ In general, if $P$ is a property of a 1-category,
 we say that a 2-category $\cC$ is \emph{locally $P$}
 if every hom-category $\cC(X,Y)$ satisfies $P$.
 
+
+By 2-category we always mean a weak 2-category
+that is furthermore locally additive over $\kk$,
+that is, all hom-categories are
+additive categories over $\kk$,
+and all compositions are $\kk$-bilinear.
+By 2-functor (sometimes just functor for simplicity)
+between 2-categories will always be locally $\kk$-linear.
+
+
 \section{Review}
 
 Let us recall some definitions and facts concerning
 semisimple 2-categories.
 These where covered in more detail in previous talks,
 so here we will simply state them without proof.
+
+\subsection{Additive 2-category, direct sums of objects}
+
+\begin{definition}[direct sum of objects in 2-category]
+A \emph{direct sum} of two objects $A_1,A_2$ in $\cC$
+is an object $A_1 \boxplus A_2$ together with
+inclusion and projection 1-morphisms
+$i_k : A_k \rightleftharpoons A_1 \boxplus A_2 : p_k$,
+such that
+\begin{itemize}
+\item $p_k \circ i_k \simeq \id_{A_k}$,
+\item $p_2 \circ i_1$, $p_1 \circ i_2$ are zero 1-morphisms,
+\item $\id_{A_1 \boxplus A_2} \simeq
+	i_1 \circ p_1 \oplus i_2 \circ p_2$
+\end{itemize}
+\end{definition}
+
+\begin{proposition}
+$i_k,p_k$ are two-sided adjoints to each other.
+\end{proposition}
+
+
+\begin{definition}
+A 1-morphism $i: X \to Y$ is \emph{fully faithful}
+(or $(X,i)$ is a \emph{subobject} of $Y$)
+if it induces fully faithful functors between hom-categories
+by post-composition, i.e. for all objects $A$,
+$i \circ - : \cC(A,X) \to \cC(A,Y)$
+is fully faithful.
+\end{definition}
+
+\begin{proposition}
+$i_k: A_k \to A_1 \boxplus A_2$ is fully faithful.
+\end{proposition}
+
 
 \subsection{Idempotent completeness, separable monads, splittings}
 
@@ -141,24 +199,22 @@ then the monad $rl$ is separable.
 \begin{definition}
 Let $(t,\mu,\eta)$ be a separable monad on
 an object $X \in \cC$.
-A \emph{splitting} of $t$ is a separable adjunction
+A \emph{(separable) splitting} of $t$ is a (separable) adjunction
 $r \vdash l: X \to Y$
 together with an isomorphism
 $\psi: rl \simeq t$ as monads on $X$.
 \end{definition}
 
 Under the right conditions
-(local idempotent completeness of $\cC$), splittings are unique
-(see \prpref{p:splitting-unique}).
+(local idempotent completeness of $\cC$),
+separable splittings are unique:
 
 
-
-
-\begin{proposition}[Uniqueness of splitting]
-[\cite{DRfusion}, Theorem A.3.1]
+\begin{proposition}[Uniqueness of separable splitting]
+[\cite{DRfusion}*{Theorem A.3.1}]
 \label{p:splitting-unique}
 In a locally idempotent complete 2-category $\cC$,
-splittings of a separable monad are unique
+separable splittings of a separable monad are unique
 up to equivalence.
 \end{proposition}
 
@@ -189,10 +245,63 @@ $l' \circ t \circ r \Rightarrow l' \circ r$
 $tr \simeq rlr \Rightarrow r$;
 similarly $l'$ is a right $t$-module).
 Such a coequalizer does appear in the proof of
-\cite{DRfusion}[Theorem A.3.1] anyway,
+\cite{DRfusion}*{Theorem A.3.1} anyway,
 and I've found that this thought process
 makes the consideration of the Eilenberg-Moore and Kleisli
-objects less of an ass-pull.
+objects more motivated.
+
+
+Now that we've defined the notion on objects,
+we consider the property as a global 2-category-wide property:
+
+
+\begin{definition}
+A 2-category $\cC$ is \emph{idempotent complete}
+if every separable monad admits a splitting.
+\end{definition}
+
+\begin{definition}
+Let $\cC$ be a locally semisimple
+(more generally locally idempotent complete)
+2-category.
+Define the \emph{idempotent completion of $\cC$},
+denoted $\cC^\nabla$, to be the 2-category whose objects
+are given by separable monads of $\cC$,
+and the hom-category of morphisms from
+separable monad $(X,p)$ to $(Y,q)$
+is the category $q$-mod-$p(\cC(X,Y))$
+of $q$-$p$-bimodules in $\cC(X,Y)$.
+
+There is a natural 2-functor $I: \cC \to \cC^\nabla$
+that is fully faithful.
+
+A 2-functor $F: \cC \to \cD$
+extends to a 2-functor $F^\nabla: \cC^\nabla \to \cD^\nabla$
+that commutes with $I$'s.
+\end{definition}
+
+This is a categorified version of the Karoubi completion
+operation.
+By going along the lines of \cite{Ostrik},
+the definition of $\cC^\nabla$
+is very suggestive of the idea that
+objects of $\cC^\nabla$ should be thought of as
+the Morita 2-category of algebras in some tensor category;
+indeed, this will be made precise in the proof
+of the main result.
+
+\begin{proposition}
+$\cC^\nabla$ is idempotent complete.
+Moreover, if $\cC$ is already idempotent complete,
+then $I: \cC \simeq \cC^\nabla$ is an equivalence.
+\end{proposition}
+
+As a consequence, if $\cD$ is idempotent complete,
+then we have equivalences of 2-categories
+\[
+\cFun(\cC,\cD) \simeq \cFun(\cC^\nabla,\cD^\nabla)
+\simeq \cFun(\cC^\nabla, \cD)
+\]
 
 
 \subsection{Simple objects}
@@ -203,18 +312,55 @@ Let $\cC$ be a locally finite semisimple and
 idempotent complete 2-category,
 and let $X \in \cC$ be an object.
 Then the following notions of $X$ being simple are equivalent:
-\begin{itemize}
-\item any subobject $i: Y \to X$ of $X$
+
+(1) any subobject $i: Y \to X$ of $X$
  is either 0 ($Y \simeq 0$)
  or ($i$ is) an equivalence;
 
-\item $X$ cannot be written as a non-trivial direct sum,
+(2) $X$ cannot be written as a non-trivial direct sum,
 	i.e. if $X = \boxplus X_i$,
 	then $X_i \simeq 0$ for all but one $i$;
 
-\item $\id_X$ is a simple object in $\cC(X,X)$.
-\end{itemize}
+(3) $\id_X$ is a simple object in $\cC(X,X)$.
 \end{proposition}
+
+\begin{proof}[Proof idea]
+(1) $\Rightarrow$ (2): Contravariant statement
+follows from fully faithfulness of
+$i_k: A_k \to A_1 \boxplus A_2$.
+
+(2) $\Rightarrow$ (3): Contravariant statement is
+``identity splitting implies object splitting'',
+uses idempotent completeness of $\cC$
+to split out objects corresponding to summands of $\id_X$
+(which are separable monads)
+(see \cite{DRfusion}*{Prop 1.3.16}).
+
+(3) $\Rightarrow$ (1): for non-zero fully faithful $r: Y \to X$,
+with $\id_X$ simple,
+consider the left adjoint $l: X \to Y$,
+use fully faithfulness to get a preimage
+$\delta : \id_Y \Rightarrow lr$ of
+$\eta \circ r: r \Rightarrow rlr$.
+Use simplicity of $\id_X$ to get section of the unit $\eta$.
+Show $\delta$ is a section of the counit. Etc.
+(See \cite{DRfusion}*{Prop 1.2.14})
+\end{proof}
+
+
+
+\section{New stuff}
+
+Beyond this point, we cover new stuff.
+Thus, the writing will be more speech like,
+and written to reflect more or less the order of presentation
+during the talk (at least how I plan to present it).
+
+
+\subsection{Schur's lemma}
+
+
+\subsection{Semisimple 2-category}
 
 
 \begin{definition}[(finite) semisimple 2-category]
@@ -236,6 +382,9 @@ has finitely many equivalence classes of simple objects.
 
 \bibitem{DRfusion} Douglas, Christopher L., and David J. Reutter. ``Fusion
 2-categories and a state-sum invariant for 4-manifolds.'' arXiv preprint arXiv:1812.11933 (2018).
+
+\bibitem{Ostrik} Ostrik, Victor. ``Module categories, weak Hopf algebras and
+modular invariants.'' Transformation groups 8, no. 2 (2003): 177-206.
 
 \end{thebibliography}
 
